# tabular-to-parquet

./: .gitignore  Cargo.toml  README.md  pyproject.toml  script_python_generate_fake_tsv.py
src/: analyse.rs  conversion.rs  lib.rs  main.rs  schema.rs  utils.rs
tests/: analyse_tests.rs  schema_tests.rs  utils_tests.rs
