[package]
name = "tabular_to_parquet"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "57.3.0"
parquet = "57.3.0"
anyhow = "1"
csv = "1.4.0"
rayon = "1.11.0"
chrono = { version = "*", features = ["serde"] }
regex = "1"
owo-colors = "4.2.3"
clap = { version = "4.5.57", features = ["derive"] }
log = "0.4.29"
tempfile = "3.24.0"
env_logger = "0.11.8"
indicatif = "0.18.3"
crossbeam = "0.8.4"
